# LinWhisper

./: README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  hotkey.rs  lib.rs  modes.rs  state.rs  tray.rs
src-tauri/src/providers/: stt.rs
src/pages/: SettingsPage.tsx
src/stores/: appStore.ts
src/types/: index.ts
