[package]
name = "whispertray"
version = "0.1.0"
description = "A tray-based dictation tool for Linux"
authors = ["WhisperTray Contributors"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "whispertray_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "whispertray"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-global-shortcut = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Audio
cpal = "0.15"
hound = "3.5"

# whisper.cpp bindings
whisper-rs = "0.11"

# Error handling
thiserror = "1"
anyhow = "1"

# Async traits
async-trait = "0.1"

# Regex for template processing
regex = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# File system
directories = "5"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1", features = ["v4"] }

# HTTP client for cloud providers (using rustls to avoid OpenSSL dependency)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }

# Secret storage
keyring = "2"

# Clipboard and paste simulation
arboard = "3"
enigo = "0.2"

# X11/Wayland window info
xcb = { version = "1", optional = true }
wayland-client = { version = "0.31", optional = true }

[features]
default = ["x11"]
x11 = ["xcb"]
wayland = ["wayland-client"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
